fixed display for home page on mobile

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,7 +1,8 @@
 .page {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
   }
   
   .top-tags {
